--- a/FrontEnd/.eslintrc
+++ b/FrontEnd/.eslintrc
@@ -11,14 +11,24 @@
     "jsx": true
   },
   "globals": {
-    "ga": true,
-    "it": true,
-    "brApp": true,
-    "define": true,
     "require": true,
-    "describe": true,
-    "navigator": true,
-    "_babelPolyfill": true,
+    "EsriView": true,
+    "AppState": true,
+    "State": true,
+    "Action": true,
+    "AsyncAction": true,
+    "Reducer": true,
+    "BaseDispatch": true,
+    "Dispatch": true,
+    "ActionCreator": true,
+    "MiddlewareAPI": true,
+    "Middleware": true,
+    "Store": true,
+    "StoreCreator": true,
+    "StoreEnhancer": true,
+    "ActionCreatorOrObjectOfACs": true,
+    "Reducers": true,
+    "Redux": true
   },
   "plugins": [
     "react"
@@ -26,14 +36,27 @@
   "extends": "eslint:recommended",
   "rules": {
     "quotes": [2, "single", "avoid-escape"],
-    "react/jsx-uses-react": 1,
+    "react/jsx-uses-react": 2,
+    "react/display-name": 2,
+    "react/jsx-no-duplicate-props": 2,
+    "react/jsx-no-undef": 2,
+    "react/jsx-uses-vars": 2,
+    "react/no-danger": 0,
+    "react/no-deprecated": 2,
+    "react/no-did-mount-set-state": [2],
+    "react/no-did-update-set-state": [2],
+    "react/no-direct-mutation-state": 2,
+    "react/no-is-mounted": 2,
+    "react/no-unknown-property": 2,
+    "react/prop-types": 2,
+    "react/react-in-jsx-scope": 2,
+    "prefer-const": 2,
     "no-console": 0,
     "no-debugger": 2,
     "no-array-constructor": 2,
     "no-caller": 2,
     "no-catch-shadow": 2,
-    "no-empty-label": 2,
-    "no-eval": 0,
+    "no-eval": 2,
     "no-extend-native": 2,
     "no-extra-bind": 2,
     "no-implied-eval": 2,
@@ -60,7 +83,6 @@
     "no-spaced-func": 2,
     "no-trailing-spaces": 2,
     "no-undef-init": 2,
-    "no-underscore-dangle": 0,
     "no-unused-expressions": 2,
     "no-unused-vars": [2, {"vars": "all", "args": "after-used", "argsIgnorePattern": "^_"}],
     "no-use-before-define": 2,
@@ -73,12 +95,12 @@
     "no-extra-parens": [2, "functions"],
     "eqeqeq": 2,
     "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
-    "new-cap": 0,
+    "new-cap": 2,
     "new-parens": 2,
     "semi": 2,
     "semi-spacing": [2, {"before": false, "after": true}],
     "space-infix-ops": 2,
-    "space-return-throw-case": 2,
+    "keyword-spacing": 2,
     "space-unary-ops": [2, { "words": true, "nonwords": false }],
     "strict": [2, "function"],
     "yoda": [2, "never"]
