--- a/FrontEnd/.gitignore
+++ b/FrontEnd/.gitignore
@@ -1,12 +1,12 @@
-# Ignore any generated content
-build
+# Ignore the build and dist directories
 dist
-_test
-_old
-_src
 
-# Ignore logs, system files, and dependencies
+# Ignore these, just do it
 node_modules
 .DS_Store
 *.log
 *.swp
+
+# SSL certs
+cert.crt
+cert.key
