--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,55 +1,69 @@
 {
-  "name": "esri-flux-react",
-  "version": "0.1.0",
-  "description": "Boilerplate for using React with Esri's JavaScript API",
-  "main": "gulpfile.js",
+  "name": "esri-redux",
+  "version": "0.9.0",
+  "description": "Simple boilerplate demonstrating how to setup a project using React, Redux, Flow, and the Esri JavaScript API.",
+  "main": "scripts/start.js",
   "scripts": {
-    "start": "npm run babel -- -w & gulp start & gulp serve",
-    "secure": "npm run babel -- -w & gulp start & SERVER=https gulp serve",
-    "dist": "rm -rf dist;gulp production;BABEL_ENV=production node ./build;",
-    "optimizejs": "npm run babel; r.js -o rjs.build.js",
-    "babel": "babel src --out-dir build",
-    "test": "eslint test/*.js; eslint src/**/*.js; mocha --colors --reporter nyan",
-    "postinstall": "bower install"
+    "start": "node scripts/start",
+    "dist": "rm -rf dist;node scripts/build;node scripts/prerender;",
+    "test": "eslint src/js/**/*.js; flow check;",
+    "coverage": "flow coverage --color src/js/components/App.js;"
   },
   "keywords": [
+    "hot",
     "esri",
-    "alt",
     "react",
+    "redux",
+    "Caddy",
+    "https",
+    "http2",
+    "es6",
     "flux",
-    "arcgis"
+    "flow",
+    "webpack",
+    "hot-reload",
+    "javascript",
+    "esri-webpack",
+    "hot-module-replacement"
   ],
-  "author": "Robert-W",
+  "author": "RobertW",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-core": "^6.4.5",
-    "babel-plugin-transform-es2015-modules-amd": "^6.4.3",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "bower": "^1.7.5"
+    "babel-runtime": "^6.9.2",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-preset-es2015-rollup": "^1.1.1",
-    "browser-sync": "^2.11.1",
-    "chai": "^3.5.0",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.16.1",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-htmlmin": "^2.0.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-pug": "^3.0.3",
-    "gulp-replace": "^0.5.4",
-    "gulp-sass": "^2.3.1",
-    "mocha": "^2.4.5",
-    "react-prerender": "0.1.0",
-    "requirejs": "^2.1.22",
-    "rollup": "^0.31.2",
-    "rollup-plugin-babel": "^2.5.1",
-    "sinon": "^1.17.3"
+    "autoprefixer": "^6.3.7",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "cheerio": "^0.20.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^2.13.0",
+    "eslint-plugin-react": "^5.2.2",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "flow-bin": "^0.27.0",
+    "html-webpack-plugin": "^2.22.0",
+    "image-webpack-loader": "^2.0.0",
+    "node-sass": "^3.8.0",
+    "postcss-loader": "^0.9.1",
+    "react-hot-loader": "^1.3.0",
+    "requirejs": "^2.2.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
